sdk/keyvault/arm-keyvault/samples/v5/javascript/README.md
# @azure/arm-keyvault client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-keyvault in some common scenarios.

| **File Name**                                                                                               | **Description**                                                                                                                                                                                                                                                                                             |
| ----------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [keysCreateIfNotExistSample.js][keyscreateifnotexistsample]                                                 | creates the first version of a new key if it does not exist. If it already exists, then the existing key is returned without any write operations being performed. This API does not create subsequent versions, and does not update existing keys. x-ms-original-file: 2026-02-01/createKey.json           |
| [keysGetSample.js][keysgetsample]                                                                           | gets the current version of the specified key from the specified key vault. x-ms-original-file: 2026-02-01/getKey.json                                                                                                                                                                                      |
| [keysGetVersionSample.js][keysgetversionsample]                                                             | gets the specified version of the specified key in the specified key vault. x-ms-original-file: 2026-02-01/getKeyVersion.json                                                                                                                                                                               |
| [keysListSample.js][keyslistsample]                                                                         | lists the keys in the specified key vault. x-ms-original-file: 2026-02-01/listKeys.json                                                                                                                                                                                                                     |
| [keysListVersionsSample.js][keyslistversionssample]                                                         | lists the keys in the specified key vault. x-ms-original-file: 2026-02-01/listKeyVersions.json                                                                                                                                                                                                              |
| [managedHsmKeysCreateIfNotExistSample.js][managedhsmkeyscreateifnotexistsample]                             | creates the first version of a new key if it does not exist. If it already exists, then the existing key is returned without any write operations being performed. This API does not create subsequent versions, and does not update existing keys. x-ms-original-file: 2026-02-01/managedHsmCreateKey.json |
| [managedHsmKeysGetSample.js][managedhsmkeysgetsample]                                                       | gets the current version of the specified key from the specified managed HSM. x-ms-original-file: 2026-02-01/managedHsmGetKey.json                                                                                                                                                                          |
| [managedHsmKeysGetVersionSample.js][managedhsmkeysgetversionsample]                                         | gets the specified version of the specified key in the specified managed HSM. x-ms-original-file: 2026-02-01/managedHsmGetKeyVersion.json                                                                                                                                                                   |
| [managedHsmKeysListSample.js][managedhsmkeyslistsample]                                                     | lists the keys in the specified managed HSM. x-ms-original-file: 2026-02-01/managedHsmListKeys.json                                                                                                                                                                                                         |
| [managedHsmKeysListVersionsSample.js][managedhsmkeyslistversionssample]                                     | lists the keys in the specified managed HSM. x-ms-original-file: 2026-02-01/managedHsmListKeyVersions.json                                                                                                                                                                                                  |
| [managedHsmsCheckMhsmNameAvailabilitySample.js][managedhsmscheckmhsmnameavailabilitysample]                 | checks that the managed hsm name is valid and is not already in use. x-ms-original-file: 2026-02-01/ManagedHsm_checkMhsmNameAvailability.json                                                                                                                                                               |
| [managedHsmsCreateOrUpdateSample.js][managedhsmscreateorupdatesample]                                       | create or update a managed HSM Pool in the specified subscription. x-ms-original-file: 2026-02-01/ManagedHsm_CreateOrUpdate.json                                                                                                                                                                            |
| [managedHsmsDeleteSample.js][managedhsmsdeletesample]                                                       | deletes the specified managed HSM Pool. x-ms-original-file: 2026-02-01/ManagedHsm_Delete.json                                                                                                                                                                                                               |
| [managedHsmsGetDeletedSample.js][managedhsmsgetdeletedsample]                                               | gets the specified deleted managed HSM. x-ms-original-file: 2026-02-01/DeletedManagedHsm_Get.json                                                                                                                                                                                                           |
| [managedHsmsGetSample.js][managedhsmsgetsample]                                                             | gets the specified managed HSM Pool. x-ms-original-file: 2026-02-01/ManagedHsm_Get.json                                                                                                                                                                                                                     |
| [managedHsmsListByResourceGroupSample.js][managedhsmslistbyresourcegroupsample]                             | the List operation gets information about the managed HSM Pools associated with the subscription and within the specified resource group. x-ms-original-file: 2026-02-01/ManagedHsm_ListByResourceGroup.json                                                                                                |
| [managedHsmsListBySubscriptionSample.js][managedhsmslistbysubscriptionsample]                               | the List operation gets information about the managed HSM Pools associated with the subscription. x-ms-original-file: 2026-02-01/ManagedHsm_ListBySubscription.json                                                                                                                                         |
| [managedHsmsListDeletedSample.js][managedhsmslistdeletedsample]                                             | the List operation gets information about the deleted managed HSMs associated with the subscription. x-ms-original-file: 2026-02-01/DeletedManagedHsm_List.json                                                                                                                                             |
| [managedHsmsPurgeDeletedSample.js][managedhsmspurgedeletedsample]                                           | permanently deletes the specified managed HSM. x-ms-original-file: 2026-02-01/DeletedManagedHsm_Purge.json                                                                                                                                                                                                  |
| [managedHsmsUpdateSample.js][managedhsmsupdatesample]                                                       | update a managed HSM Pool in the specified subscription. x-ms-original-file: 2026-02-01/ManagedHsm_Update.json                                                                                                                                                                                              |
| [mhsmPrivateEndpointConnectionsDeleteSample.js][mhsmprivateendpointconnectionsdeletesample]                 | deletes the specified private endpoint connection associated with the managed hsm pool. x-ms-original-file: 2026-02-01/ManagedHsm_deletePrivateEndpointConnection.json                                                                                                                                      |
| [mhsmPrivateEndpointConnectionsGetSample.js][mhsmprivateendpointconnectionsgetsample]                       | gets the specified private endpoint connection associated with the managed HSM Pool. x-ms-original-file: 2026-02-01/ManagedHsm_getPrivateEndpointConnection.json                                                                                                                                            |
| [mhsmPrivateEndpointConnectionsListByResourceSample.js][mhsmprivateendpointconnectionslistbyresourcesample] | the List operation gets information about the private endpoint connections associated with the managed HSM Pool. x-ms-original-file: 2026-02-01/ManagedHsm_ListPrivateEndpointConnectionsByResource.json                                                                                                    |
| [mhsmPrivateEndpointConnectionsPutSample.js][mhsmprivateendpointconnectionsputsample]                       | updates the specified private endpoint connection associated with the managed hsm pool. x-ms-original-file: 2026-02-01/ManagedHsm_putPrivateEndpointConnection.json                                                                                                                                         |
| [mhsmPrivateLinkResourcesListByMhsmResourceSample.js][mhsmprivatelinkresourceslistbymhsmresourcesample]     | gets the private link resources supported for the managed hsm pool. x-ms-original-file: 2026-02-01/ManagedHsm_listPrivateLinkResources.json                                                                                                                                                                 |
| [mhsmRegionsListByResourceSample.js][mhsmregionslistbyresourcesample]                                       | the List operation gets information about the regions associated with the managed HSM Pool. x-ms-original-file: 2026-02-01/ManagedHsm_ListRegionsByResource.json                                                                                                                                            |
| [operationsListSample.js][operationslistsample]                                                             | list the operations for the provider x-ms-original-file: 2026-02-01/listOperations.json                                                                                                                                                                                                                     |
| [privateEndpointConnectionsDeleteSample.js][privateendpointconnectionsdeletesample]                         | deletes the specified private endpoint connection associated with the key vault. x-ms-original-file: 2026-02-01/deletePrivateEndpointConnection.json                                                                                                                                                        |
| [privateEndpointConnectionsGetSample.js][privateendpointconnectionsgetsample]                               | gets the specified private endpoint connection associated with the key vault. x-ms-original-file: 2026-02-01/getPrivateEndpointConnection.json                                                                                                                                                              |
| [privateEndpointConnectionsListByResourceSample.js][privateendpointconnectionslistbyresourcesample]         | the List operation gets information about the private endpoint connections associated with the vault. x-ms-original-file: 2026-02-01/listPrivateEndpointConnection.json                                                                                                                                     |
| [privateEndpointConnectionsPutSample.js][privateendpointconnectionsputsample]                               | updates the specified private endpoint connection associated with the key vault. x-ms-original-file: 2026-02-01/putPrivateEndpointConnection.json                                                                                                                                                           |
| [privateLinkResourcesListByVaultSample.js][privatelinkresourceslistbyvaultsample]                           | gets the private link resources supported for the key vault. x-ms-original-file: 2026-02-01/listPrivateLinkResources.json                                                                                                                                                                                   |
| [secretsCreateOrUpdateSample.js][secretscreateorupdatesample]                                               | create or update a secret in a key vault in the specified subscription. NOTE: This API is intended for internal use in ARM deployments. Users should use the data-plane REST service for interaction with vault secrets. x-ms-original-file: 2026-02-01/createSecret.json                                   |
| [secretsGetSample.js][secretsgetsample]                                                                     | gets the specified secret. NOTE: This API is intended for internal use in ARM deployments. Users should use the data-plane REST service for interaction with vault secrets. x-ms-original-file: 2026-02-01/getSecret.json                                                                                   |
| [secretsListSample.js][secretslistsample]                                                                   | the List operation gets information about the secrets in a vault. NOTE: This API is intended for internal use in ARM deployments. Users should use the data-plane REST service for interaction with vault secrets. x-ms-original-file: 2026-02-01/listSecrets.json                                          |
| [secretsUpdateSample.js][secretsupdatesample]                                                               | update a secret in the specified subscription. NOTE: This API is intended for internal use in ARM deployments. Users should use the data-plane REST service for interaction with vault secrets. x-ms-original-file: 2026-02-01/updateSecret.json                                                            |
| [vaultsCheckNameAvailabilitySample.js][vaultschecknameavailabilitysample]                                   | checks that the vault name is valid and is not already in use. x-ms-original-file: 2026-02-01/checkVaultNameAvailability.json                                                                                                                                                                               |
| [vaultsCreateOrUpdateSample.js][vaultscreateorupdatesample]                                                 | create or update a key vault in the specified subscription. x-ms-original-file: 2026-02-01/createVault.json                                                                                                                                                                                                 |
| [vaultsDeleteSample.js][vaultsdeletesample]                                                                 | deletes the specified Azure key vault. x-ms-original-file: 2026-02-01/deleteVault.json                                                                                                                                                                                                                      |
| [vaultsGetDeletedSample.js][vaultsgetdeletedsample]                                                         | gets the deleted Azure key vault. x-ms-original-file: 2026-02-01/getDeletedVault.json                                                                                                                                                                                                                       |
| [vaultsGetSample.js][vaultsgetsample]                                                                       | gets the specified Azure key vault. x-ms-original-file: 2026-02-01/getVault.json                                                                                                                                                                                                                            |
| [vaultsListByResourceGroupSample.js][vaultslistbyresourcegroupsample]                                       | the List operation gets information about the vaults associated with the subscription and within the specified resource group. x-ms-original-file: 2026-02-01/listVaultByResourceGroup.json                                                                                                                 |
| [vaultsListBySubscriptionSample.js][vaultslistbysubscriptionsample]                                         | the List operation gets information about the vaults associated with the subscription. x-ms-original-file: 2026-02-01/listVaultBySubscription.json                                                                                                                                                          |
| [vaultsListDeletedSample.js][vaultslistdeletedsample]                                                       | gets information about the deleted vaults in a subscription. x-ms-original-file: 2026-02-01/listDeletedVaults.json                                                                                                                                                                                          |
| [vaultsListSample.js][vaultslistsample]                                                                     | the List operation gets information about the vaults associated with the subscription. x-ms-original-file: 2026-02-01/listVault.json                                                                                                                                                                        |
| [vaultsPurgeDeletedSample.js][vaultspurgedeletedsample]                                                     | permanently deletes the specified vault. aka Purges the deleted Azure key vault. x-ms-original-file: 2026-02-01/purgeDeletedVault.json                                                                                                                                                                      |
| [vaultsUpdateAccessPolicySample.js][vaultsupdateaccesspolicysample]                                         | update access policies in a key vault in the specified subscription. x-ms-original-file: 2026-02-01/updateAccessPoliciesAdd.json                                                                                                                                                                            |
| [vaultsUpdateSample.js][vaultsupdatesample]                                                                 | update a key vault in the specified subscription. x-ms-original-file: 2026-02-01/updateVault.json                                                                                                                                                                                                           |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node keysCreateIfNotExistSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node keysCreateIfNotExistSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[keyscreateifnotexistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/keysCreateIfNotExistSample.js
[keysgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/keysGetSample.js
[keysgetversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/keysGetVersionSample.js
[keyslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/keysListSample.js
[keyslistversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/keysListVersionsSample.js
[managedhsmkeyscreateifnotexistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/managedHsmKeysCreateIfNotExistSample.js
[managedhsmkeysgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/managedHsmKeysGetSample.js
[managedhsmkeysgetversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/managedHsmKeysGetVersionSample.js
[managedhsmkeyslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/managedHsmKeysListSample.js
[managedhsmkeyslistversionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/managedHsmKeysListVersionsSample.js
[managedhsmscheckmhsmnameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/managedHsmsCheckMhsmNameAvailabilitySample.js
[managedhsmscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/managedHsmsCreateOrUpdateSample.js
[managedhsmsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/managedHsmsDeleteSample.js
[managedhsmsgetdeletedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/managedHsmsGetDeletedSample.js
[managedhsmsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/managedHsmsGetSample.js
[managedhsmslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/managedHsmsListByResourceGroupSample.js
[managedhsmslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/managedHsmsListBySubscriptionSample.js
[managedhsmslistdeletedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/managedHsmsListDeletedSample.js
[managedhsmspurgedeletedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/managedHsmsPurgeDeletedSample.js
[managedhsmsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/managedHsmsUpdateSample.js
[mhsmprivateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/mhsmPrivateEndpointConnectionsDeleteSample.js
[mhsmprivateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/mhsmPrivateEndpointConnectionsGetSample.js
[mhsmprivateendpointconnectionslistbyresourcesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/mhsmPrivateEndpointConnectionsListByResourceSample.js
[mhsmprivateendpointconnectionsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/mhsmPrivateEndpointConnectionsPutSample.js
[mhsmprivatelinkresourceslistbymhsmresourcesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/mhsmPrivateLinkResourcesListByMhsmResourceSample.js
[mhsmregionslistbyresourcesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/mhsmRegionsListByResourceSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/operationsListSample.js
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/privateEndpointConnectionsDeleteSample.js
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/privateEndpointConnectionsGetSample.js
[privateendpointconnectionslistbyresourcesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/privateEndpointConnectionsListByResourceSample.js
[privateendpointconnectionsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/privateEndpointConnectionsPutSample.js
[privatelinkresourceslistbyvaultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/privateLinkResourcesListByVaultSample.js
[secretscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/secretsCreateOrUpdateSample.js
[secretsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/secretsGetSample.js
[secretslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/secretsListSample.js
[secretsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/secretsUpdateSample.js
[vaultschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/vaultsCheckNameAvailabilitySample.js
[vaultscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/vaultsCreateOrUpdateSample.js
[vaultsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/vaultsDeleteSample.js
[vaultsgetdeletedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/vaultsGetDeletedSample.js
[vaultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/vaultsGetSample.js
[vaultslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/vaultsListByResourceGroupSample.js
[vaultslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/vaultsListBySubscriptionSample.js
[vaultslistdeletedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/vaultsListDeletedSample.js
[vaultslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/vaultsListSample.js
[vaultspurgedeletedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/vaultsPurgeDeletedSample.js
[vaultsupdateaccesspolicysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/vaultsUpdateAccessPolicySample.js
[vaultsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/keyvault/arm-keyvault/samples/v5/javascript/vaultsUpdateSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-keyvault?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/keyvault/arm-keyvault/README.md
